--- a/styles/pages/breweries.scss
+++ b/styles/pages/breweries.scss
@@ -16,23 +16,23 @@
     filter: brightness(26%) saturate(127%) blur(4px);
   }
   h1 {
-    font-family: "Sketch";
-    font-size: 4rem;
-    text-shadow: 2px 4px 4px black;
+    font-family: "CandyCane";
+    font-size: 8rem;
+    text-shadow: 2px 6px 6px black;
     color: rgba($primary-color, 0.7);
-    letter-spacing: 0.5rem;
+    letter-spacing: 0.6rem;
     font-weight: 100;
     text-align: center;
     padding-bottom: 2rem;
   }
   .info {
-    color: white;
-    z-index: 2;
+    color: whitesmoke;
+    z-index: 3;
     @include flex(column, center, center);
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 500;
     text-align: center;
-    text-shadow: 2px 2px 2px black;
+    text-shadow: 8px 8px 8px black;
     padding: 2rem 1rem;
     line-height: 4rem;
   }
